Configurazione CAS per dev-demo-regioneTest-regioneProd

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -49,4 +49,8 @@ mail.password=
 #base url della webapp per link nelle email
 application.baseurl=http://ecmtest.demo.3di.it/ecm/
 
+######### CAS #########
+app.service.home=https://ecmtest.demo.3di.it/ecm/
+app.service.security=https://ecmtest.demo.3di.it/ecm/j_spring_cas_security_check
+
 ##############################################
