--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -43,6 +43,10 @@ email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 
+######### CAS #########
+app.service.home=https://localhost:8443/
+app.service.security=https://localhost:8443/j_spring_cas_security_check
+
 ######### HTTPS #######
 server.port: 8443
 server.ssl.key-store: keystore.p12
