--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -89,3 +89,7 @@ protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
 
 spring.datasource.test-on-borrow=true
 spring.datasource.validation-query=select 1
+
+######### CAS #########
+app.service.home=https://ecm.regione.veneto.it/ecm/
+app.service.security=https://ecm.regione.veneto.it/ecm/j_spring_cas_security_check
