--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -53,4 +53,8 @@ firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTT
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=https://ecm-test.regione.veneto.it/ecm/*
 
+######### CAS #########
+app.service.home=https://ecm-test.regione.veneto.it/ecm/
+app.service.security=https://ecm-test.regione.veneto.it/ecm/j_spring_cas_security_check
+
 ##############################################
