--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -59,8 +59,8 @@ EventoRES.obiettivoRegionale=label.obiettivo_strategico_regionale
 EventoRES.pagato=label.pagato
 EventoRES.pagInCorso=label.pagInCorso
 EventoRES.partners=label.partners
-EventoRES.proceduraFormativa=label.procedura_verifica_qualita
-EventoRES.proceduraVerificaQualitaPercepita=label.autorizzazione_privacy
+EventoRES.proceduraFormativa=label.procedura_formativa
+EventoRES.proceduraVerificaQualitaPercepita=label.procedura_verifica_qualita
 EventoRES.professioniEvento=label.professioni_cui_evento_si_riferisce
 EventoRES.quotaPartecipazione=label.quota_partecipazione
 EventoRES.reportPartecipantiCSV=label.reportPartecipantiCSV
@@ -130,7 +130,8 @@ EventoFAD.durata=label.durata
 #EventoFAD.edizione=label.edizione
 EventoFAD.eventoAvvalePartner=label.si_avvale_di_partner
 EventoFAD.eventoSponsorizzato=label.evento_sponsorizzato_radio
-EventoRES.eventoSponsorizzatoDaAziendeAlimentiPrimaInfanzia=label.evento_sponsorizzato_infanzia_radioEventoFAD.id=label.id
+EventoRES.eventoSponsorizzatoDaAziendeAlimentiPrimaInfanzia=label.evento_sponsorizzato_infanzia_radio
+EventoFAD.id=label.id
 EventoFAD.letteInfoAllegatoSponsor=label.info_sponsor_evento
 EventoFAD.materialeDurevoleRilasciatoAiPratecipanti=label.tipo_materiale_rilasciato
 EventoFAD.numeroPartecipanti=label.numero_partecipanti
@@ -142,8 +143,8 @@ EventoFAD.partners=label.partners
 EventoFAD.password=label.password
 #non salvato
 #EventoFAD.prefix=label.prefix
-EventoFAD.proceduraFormativa=label.procedura_verifica_qualita
-EventoFAD.proceduraVerificaQualitaPercepita=label.autorizzazione_privacy
+EventoFAD.proceduraFormativa=label.procedura_formativa
+EventoFAD.proceduraVerificaQualitaPercepita=label.procedura_verifica_qualita
 EventoFAD.programmaFAD=label.dettaglio_attivita
 EventoFAD.quotaPartecipazione=label.quota_partecipazione
 EventoFAD.razionale=label.razionale
@@ -206,8 +207,8 @@ EventoFSC.obiettivoRegionale=label.obiettivo_strategico_regionale
 EventoFSC.pagato=label.pagato
 EventoFSC.pagInCorso=label.pagInCorso
 EventoFSC.partners=label.partners
-EventoFSC.proceduraFormativa=label.procedura_verifica_qualita
-EventoFSC.proceduraVerificaQualitaPercepita=label.autorizzazione_privacy
+EventoFSC.proceduraFormativa=label.procedura_formativa
+EventoFSC.proceduraVerificaQualitaPercepita=label.procedura_verifica_qualita
 EventoFSC.professioniEvento=label.professioni_cui_evento_si_riferisce
 EventoFSC.quotaPartecipazione=label.quota_partecipazione
 EventoFSC.reportPartecipantiCSV=label.reportPartecipantiCSV
@@ -318,6 +319,7 @@ ProviderAudit.coordinatoreComitatoScientifico.anagrafica=
 ProviderAudit.delegatoLegaleRappresentante.anagrafica=
 ProviderAudit.legaleRappresentante.anagrafica=
 ProviderAudit.responsabileSegreteria.anagrafica=
+ProviderAudit.hasPartitaIVA=label.ha_partita_IVA
 SedeAudit.id=label.id
 SedeAudit.provincia=label.provincia
 SedeAudit.comune=label.comune
