--- a/pom.xml
+++ b/pom.xml
@@ -162,11 +162,6 @@
 		    <artifactId>commons-csv</artifactId>
 		    <version>1.3</version>
 		</dependency>	
-		 <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.49</version>
-        </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
@@ -205,6 +200,10 @@
 				<exclusion>
 					<groupId>org.slf4j</groupId>
 					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcprov-jdk15</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
