Updtae configurazione MYPAY

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -167,8 +167,8 @@ thread.waitForTasksToCompleteOnShutdown=true
 
 ######### MY PAY #########
 #Parametri per connettersi al servizio (diverso tra test e produzione)
-ipa=R_VENETO
-password=password
+ipa=AZERO
+password=HGDLQTZSVLZH
 #Id servizio assegnato da MyPay (IUD)
 servizio=009
 #Endpoint (diverso tra test e produzione)
