Bugfix label mancante

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -18,6 +18,7 @@ EventoRES.dateIntermedie=label.date_intermedie
 EventoRES.sedeEvento=label.informazioni_sede
 EventoRES.tipologiaEventoRES=label.tipologia_evento
 EventoRES.titoloConvegno=label.titolo_convegno
+EventoRES.workshopSeminariEcm=label.workshop_radio_text
 SedeEvento.comune=label.comune
 SedeEvento.provincia=label.provincia
 SedeEvento.indirizzo=label.indirizzo
