altre MEV ecm minori

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -316,6 +316,7 @@ ProviderAttivitaAudit.canInsertEvento=label.caninsert_eventi
 ProviderAttivitaAudit.canInsertRelazioneAnnuale=label.caninsert_relazione_annuale
 ProviderAttivitaAudit.dataScadenzaInsertRelazioneAnnuale=label.caninsert_relazione_annuale_scadenza
 ProviderAttivitaAudit.status=label.stato_del_provider
+ProviderAttivitaAudit.myPay=label.pagamento_con_myPay_settings
 ProviderAudit.coordinatoreComitatoScientifico.anagrafica=
 ProviderAudit.delegatoLegaleRappresentante.anagrafica=
 ProviderAudit.legaleRappresentante.anagrafica=
