--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -52,12 +52,12 @@ application.baseurl=http://ecm.regione.veneto.it
 
 ######### MY PAY #########
 #Parametri per connettersi al servizio (diverso tra test e produzione)
-ipa=R_VENETO
-password=password
+ipa=AZERO
+password=8QZYS0P08WC8
 #Id servizio assegnato da MyPay (IUD)
 servizio=009
 #Endpoint (diverso tra test e produzione)
-endpoint.pagamenti=
+endpoint.pagamenti=https://mypay.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
 #Specifico in base a cosa pago - da concordare con RVE e Mola
 datispecifici.riscossione=9/123456
 #Da aggiornare con il dato definitivo (da concordare con Regione)
