Update CAS per aggiunta url validazione

--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -56,5 +56,6 @@ firma.referer=https://ecm-test.regione.veneto.it/ecm/*
 ######### CAS #########
 app.service.home=https://ecm-test.regione.veneto.it/ecm/
 app.service.security=https://ecm-test.regione.veneto.it/ecm/j_spring_cas_security_check
+cas.service.validation=http://cas-test-internet-backend.farmsanita.intra.rve/cas
 
 ##############################################
