--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -206,6 +206,7 @@ app.service.security=https://localhost:8443/j_spring_cas_security_check
 cas.url.prefix=https://cas.regione.veneto.it/cas
 cas.service.login=https://cas.regione.veneto.it/cas/login
 cas.service.logout=https://cas.regione.veneto.it/cas/logout
+cas.service.validation=https://cas.regione.veneto.it/cas
 
 ######### JAVERS #########
 javers.packagesToScan=it.tredi.ecm.audit.entity,it.tredi.ecm.dao.entity
