--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -93,3 +93,4 @@ spring.datasource.validation-query=select 1
 ######### CAS #########
 app.service.home=https://ecm.regione.veneto.it/ecm/
 app.service.security=https://ecm.regione.veneto.it/ecm/j_spring_cas_security_check
+cas.service.validation=http://cas-internet-backend.farmsanita.intra.rve/cas
