UPDATE PARAMETRI CAS TEST/PROD

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -93,4 +93,7 @@ spring.datasource.validation-query=select 1
 ######### CAS #########
 app.service.home=https://ecm.regione.veneto.it/ecm/
 app.service.security=https://ecm.regione.veneto.it/ecm/j_spring_cas_security_check
+cas.url.prefix=https://cas.regione.veneto.it/cas
+cas.service.login=https://cas.regione.veneto.it/cas/login
+cas.service.logout=https://cas.regione.veneto.it/cas/logout
 cas.service.validation=http://cas-internet-backend.farmsanita.intra.rve/cas
