--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -56,6 +56,8 @@ firma.referer=https://ecm-test.regione.veneto.it/ecm/*
 ######### CAS #########
 app.service.home=https://ecm-test.regione.veneto.it/ecm/
 app.service.security=https://ecm-test.regione.veneto.it/ecm/j_spring_cas_security_check
+cas.url.prefix=https://cas-test.regione.veneto.it/cas
+cas.service.login=https://cas-test.regione.veneto.it/cas/login
+cas.service.logout=https://cas-test.regione.veneto.it/cas/logout
 cas.service.validation=http://cas-test-internet-backend.farmsanita.intra.rve/cas
-
 ##############################################
