Proxy per CogeapsWsRestClient

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -37,6 +37,7 @@ cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
 cogeaps.password=JqFdpjv!9Y
+cogeaps.proxy.attivo=true
 
 ###### E-MAIL ######
 mail.host=mailrelay.farmsanita.intra.rve
@@ -97,3 +98,10 @@ cas.url.prefix=https://cas.regione.veneto.it/cas
 cas.service.login=https://cas.regione.veneto.it/cas/login
 cas.service.logout=https://cas.regione.veneto.it/cas/logout
 cas.service.validation=http://cas-internet-backend.farmsanita.intra.rve/cas
+
+######### PROXY #########
+http.proxy.protocol=http
+http.proxy.address=192.168.155.55
+http.proxy.port=8000
+
+##############################################
