--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -36,6 +36,9 @@ bonita.users.password=pwd
 bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
 
+########## Co.Ge.A.P.S. #########
+cogeaps.proxy.attivo=true
+
 ###### E-MAIL ######
 mail.host=mailrelay.farmsanita.intra.rve
 mail.port=25
@@ -60,4 +63,10 @@ cas.url.prefix=https://cas-test.regione.veneto.it/cas
 cas.service.login=https://cas-test.regione.veneto.it/cas/login
 cas.service.logout=https://cas-test.regione.veneto.it/cas/logout
 cas.service.validation=http://cas-test-internet-backend.farmsanita.intra.rve/cas
+
+######### PROXY #########
+http.proxy.protocol=http
+http.proxy.address=192.168.155.55
+http.proxy.port=8000
+
 ##############################################
