--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -150,6 +150,7 @@ cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
 cogeaps.password=JqFdpjv!9Y
+cogeaps.proxy.attivo=false
 
 ##############################################
 
@@ -211,5 +212,9 @@ cas.service.validation=https://cas.regione.veneto.it/cas
 ######### JAVERS #########
 javers.packagesToScan=it.tredi.ecm.audit.entity,it.tredi.ecm.dao.entity
 
+######### PROXY #########
+http.proxy.protocol=http
+http.proxy.address=10.17.61.68
+http.proxy.port=3128
 
 ##############################################
