CogeapsWsRestClient - Proxy version con predisposizione per eventuale PROXY con autenticazione

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -214,7 +214,10 @@ javers.packagesToScan=it.tredi.ecm.audit.entity,it.tredi.ecm.dao.entity
 
 ######### PROXY #########
 http.proxy.protocol=http
-http.proxy.address=10.17.61.68
+http.proxy.host=10.17.61.68
 http.proxy.port=3128
+http.proxy.authenticated=false
+http.proxy.username=
+http.proxy.password=
 
 ##############################################
