Update Proxy properties + CAS Properties

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -32,7 +32,7 @@ logging.level.org.thymeleaf.* ERROR
 ########## Co.Ge.A.P.S. #########
 cogeaps.protocol=http
 cogeaps.host=ws1.cogeaps.it
-cogeaps.port=-1
+cogeaps.port=8090
 cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
@@ -101,7 +101,7 @@ cas.service.validation=http://cas-internet-backend.farmsanita.intra.rve/cas
 
 ######### PROXY #########
 http.proxy.protocol=http
-http.proxy.address=192.168.155.55
+http.proxy.host=192.168.155.55
 http.proxy.port=8000
 
 ##############################################
