--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -66,7 +66,7 @@ cas.service.validation=http://cas-test-internet-backend.farmsanita.intra.rve/cas
 
 ######### PROXY #########
 http.proxy.protocol=http
-http.proxy.address=192.168.155.55
+http.proxy.host=192.168.155.55
 http.proxy.port=8000
 
 ##############################################
