--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ multipart.maxRequestSize = 20MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
+ecm.version=1.0.0
 
 #validita' in giorni della password
 account.expires.days=365
@@ -204,10 +205,10 @@ protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
 ######### CAS #########
 app.service.home=https://localhost:8443/
 app.service.security=https://localhost:8443/j_spring_cas_security_check
-cas.url.prefix=https://cas.regione.veneto.it/cas
-cas.service.login=https://cas.regione.veneto.it/cas/login
-cas.service.logout=https://cas.regione.veneto.it/cas/logout
-cas.service.validation=https://cas.regione.veneto.it/cas
+cas.url.prefix=https://cas-test.regione.veneto.it/cas
+cas.service.login=https://cas-test.regione.veneto.it/cas/login
+cas.service.logout=https://cas-test.regione.veneto.it/cas/logout
+cas.service.validation=https://cas-test.regione.veneto.it/cas
 
 ######### JAVERS #########
 javers.packagesToScan=it.tredi.ecm.audit.entity,it.tredi.ecm.dao.entity
