Aggiunta all'audit del provider il responsabile amministrativo il responsabile del sistema informatico e il responsabile della qualita. Modificata l'etichetta del campo Pagato nel audit degli eventi da Pagato a Stato pagamento

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -57,7 +57,7 @@ EventoRES.letteInfoAllegatoSponsor=label.info_sponsor_evento
 EventoRES.numeroPartecipanti=label.numero_partecipanti
 EventoRES.obiettivoNazionale=label.obiettivo_strategico_nazionale
 EventoRES.obiettivoRegionale=label.obiettivo_strategico_regionale
-EventoRES.pagato=label.pagato
+EventoRES.pagato=label.pagato_stato
 EventoRES.pagInCorso=label.pagInCorso
 EventoRES.partners=label.partners
 EventoRES.proceduraFormativa=label.procedura_formativa
@@ -138,7 +138,7 @@ EventoFAD.materialeDurevoleRilasciatoAiPratecipanti=label.tipo_materiale_rilasci
 EventoFAD.numeroPartecipanti=label.numero_partecipanti
 EventoFAD.obiettivoNazionale=label.obiettivo_strategico_nazionale
 EventoFAD.obiettivoRegionale=label.obiettivo_strategico_regionale
-EventoFAD.pagato=label.pagato
+EventoFAD.pagato=label.pagato_stato
 EventoFAD.pagInCorso=label.pagInCorso
 EventoFAD.partners=label.partners
 EventoFAD.password=label.password
@@ -205,7 +205,7 @@ EventoFSC.letteInfoAllegatoSponsor=label.info_sponsor_evento
 EventoFSC.numeroPartecipanti=label.numero_partecipanti
 EventoFSC.obiettivoNazionale=label.obiettivo_strategico_nazionale
 EventoFSC.obiettivoRegionale=label.obiettivo_strategico_regionale
-EventoFSC.pagato=label.pagato
+EventoFSC.pagato=label.pagato_stato
 EventoFSC.pagInCorso=label.pagInCorso
 EventoFSC.partners=label.partners
 EventoFSC.proceduraFormativa=label.procedura_formativa
@@ -274,6 +274,12 @@ ProviderAudit.delegatoLegaleRappresentante=label.delegato_legale_rappresentante
 ProviderAudit.coordinatoreComitatoScientifico=label.coordinatore_comitato_scientifico
 ProviderAudit.responsabileSegreteria=label.responsabile_segreteria
 ProviderAudit.componentiComitatoScientificoMap=label.componenti_comitato_scientifico
+ProviderAudit.responsabileAmministrativo=label.responsabile_amministrativo
+ProviderAudit.responsabileSistemaInformatico=label.responsabile_sistema_informatico
+ProviderAudit.responsabileQualita=label.responsabile_qualita
+ProviderAudit.responsabileAmministrativo.anagrafica=
+ProviderAudit.responsabileSistemaInformatico.anagrafica=
+ProviderAudit.responsabileQualita.anagrafica=
 #lasciatop vuoto cosi non viene mostrato
 ProviderAudit.componentiComitatoScientificoMap.anagrafica=
 ProviderAudit.sedeLegale=label.sede_legale
