Endpoint Protocollo per demo

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -17,6 +17,9 @@ debugSaltaProtocollo=true
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
+###### PROTOCOLLO #######
+protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
+
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://ecmtest.bo.priv:18080/bonitaview
 bonita.serverurl=http://ecmtest.bo.priv:18080
