Disabilitato HTTPS per profilo dev per semplificare i test e lo sviluppo

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,10 +48,10 @@ app.service.home=https://localhost:8443/
 app.service.security=https://localhost:8443/j_spring_cas_security_check
 
 ######### HTTPS #######
-server.port: 8443
-server.ssl.key-store: keystore.p12
-server.ssl.key-store-password: adminadmin3d
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+#server.port: 8443
+#server.ssl.key-store: keystore.p12
+#server.ssl.key-store-password: adminadmin3d
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: tomcat
 
 ##############################################
