task https://easyredmine.3di.it/issues/11667 : Protocollo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -196,10 +196,10 @@ firma.referer=http://ecmtest.demo.3di.it/ecm/*
 
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
-protocollo.operatore=tania-ferrotti
-protocollo.codStruttura=69.02.03.00.00
-protocollo.idc=C.120.23.1
-protocollo.oggetto=Test Engineering ECM
+protocollo.operatore.entrata=ecm
+protocollo.operatore.uscita=segreteria-ecm
+protocollo.codStruttura=72.00.08.00.00
+protocollo.idc=G.900.11.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
 
 ######### CAS #########
