--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -80,12 +80,11 @@ firma.referer=https://ecm.regione.veneto.it/ecm/*
 
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
-protocollo.operatore=tania-ferrotti
-protocollo.codStruttura=69.02.03.00.00
-protocollo.idc=C.120.23.1
-protocollo.oggetto=Test Engineering ECM
+protocollo.operatore.entrata=ecm
+protocollo.operatore.uscita=segreteria-ecm
+protocollo.codStruttura=72.00.08.00.00
+protocollo.idc=G.900.11.1
 protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
-
 ##############################################
 
 spring.datasource.test-on-borrow=true
