--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -81,7 +81,7 @@ firma.referer=https://ecm.regione.veneto.it/ecm/*
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
 protocollo.operatore.entrata=ecm
-protocollo.operatore.uscita=segreteria-ecm
+protocollo.operatore.uscita=tania-ferrotti
 protocollo.codStruttura=72.00.08.00.00
 protocollo.idc=G.900.11.1
 protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
