--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 20MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=1.0.4
+ecm.version=1.0.6
 
 #validita' in giorni della password
 account.expires.days=365
@@ -197,9 +197,9 @@ firma.referer=http://ecmtest.demo.3di.it/ecm/*
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
 protocollo.operatore.entrata=ecm
-protocollo.operatore.uscita=segreteria-ecm
+protocollo.operatore.uscita=tania-ferrotti
 protocollo.codStruttura=72.00.08.00.00
-protocollo.idc=G.900.11.1
+protocollo.idc=G.900.20.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
 
 ######### CAS #########
