--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 20MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=1.0.6
+ecm.version=1.0.10-snapshot
 
 #validita' in giorni della password
 account.expires.days=365
