Bug fix e migliorie varie: 15/06/2017

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -221,3 +221,9 @@ http.proxy.username=
 http.proxy.password=
 
 ##############################################
+
+# la seguente property risolverebbe tutti gli errori di lazy initialization exception
+# tuttavia ogni volta che deve accedere alla risorsa non caricata a sessione chiusa
+# deve aprire una nuova connessione come nel pattern "Open Session in View"
+# per approfondire:https://hibernate.atlassian.net/browse/HHH-7457?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel&showAll=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
