Risolto problema multischeda: task #11664

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -120,6 +120,9 @@ valutazioni.non.date.limite=3
 #giorni che il provider ha per poter modificare i dati e i documenti della domanda di accreditamento
 giorni.variazione.dati.accreditamento=10
 
+#numero massimo di bean in sessione contemporaneamente
+num.conversation.toKeep=10
+
 ########################################################
 
 ############### DATE E SCADENZE VARIE ###############
