Bug fix 06/07/2017 (eventoList e audit evento) + evento audit per sync

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -199,9 +199,9 @@ firma.referer=http://ecmtest.demo.3di.it/ecm/*
 
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
-protocollo.operatore.entrata=ecm
-protocollo.codStruttura=72.00.08.00.00
-protocollo.idc=G.900.20.1
+protocollo.operatore.entrata=tania-ferrotti
+protocollo.codStruttura=69.02.03.00.00
+protocollo.idc=C.120.23.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
 
 ######### CAS #########
