Dimensione file MAX 4MB per atto costituivo e statuto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,13 +29,14 @@ multipart.maxRequestSize = 20MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=1.0.15
+ecm.version=1.0.16-SNAPSHOT
 
 #validita' in giorni della password
 account.expires.days=365
 
 # File size limit (Mb)
 file.multipart.maxFileSize=2
+file.multipart.maxFileSize4MB=4
 
 #limite in minuti prima dello scadere entro cui è modificabile la seduta
 seduta.validation.minutes=30
