bugfix synch su calcolo costo

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -72,6 +72,7 @@ EventoRES.responsabileSegreteria.anagrafica=
 EventoRES.sponsors=label.sponsors
 EventoRES.stato=label.stato
 EventoRES.titolo=label.titolo
+EventoRES.pagatoQuietanza=label.pagato_con_quietanza
 #campi non in classe base Evento
 DettaglioAttivitaRES.argomento=label.argomento
 DettaglioAttivitaRES.docenti=label.docenti
@@ -127,6 +128,7 @@ EventoFAD.dichiarazioneAssenzaConflittoInteresse=label.dichiarazione_assenza_con
 EventoFAD.discipline=label.discipline
 EventoFAD.docenti=label.docente_tutor
 EventoFAD.durata=label.durata
+EventoFAD.pagatoQuietanza=label.pagato_con_quietanza
 #non salvato
 #EventoFAD.edizione=label.edizione
 EventoFAD.eventoAvvalePartner=label.si_avvale_di_partner
@@ -191,6 +193,7 @@ EventoFSC.costo=label.costo_totale_eventi
 EventoFSC.crediti=label.crediti_formativi_attribuiti_utente
 EventoFSC.dataFine=label.data_fine
 EventoFSC.dataInizio=label.data_inizio
+EventoFSC.pagatoQuietanza=label.pagato_con_quietanza
 EventoFSC.dataScadenzaPagamento=label.data_scadenza_pagamento
 EventoFSC.dataScadenzaInvioRendicontazione=label.posticipo_scadenza_rendicontazione
 EventoFSC.destinatariEvento=label.destinatari_evento
