Modifica Gestione Timer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -124,6 +124,10 @@ giorni.variazione.dati.accreditamento=10
 #numero massimo di bean in sessione contemporaneamente
 num.conversation.toKeep=10
 
+#booleans to change behaviour of gestione timer in Accreditamento
+conteggioGiorniAvanzatoAbilitato=false
+conteggioGiorniAvanzatoBeforeDayMode=false
+
 ########################################################
 
 ############### DATE E SCADENZE VARIE ###############
