Import pianoformativo da csv anche con eventi gia inseriti

--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -3,7 +3,8 @@
 changeLogFile=src/main/resources/liquibase/master-changeLog.xml
 driver=org.postgresql.Driver
 #Database da controllare per realizzare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
-url=jdbc:postgresql://localhost:5432/ecmdb
+#url=jdbc:postgresql://localhost:5432/ecmdb
+url=jdbc:postgresql://10.17.61.242:5432/ecmdb
 defaultSchemaName=ecmdb
 #defaultCatalogName=ecmdb
 username=ecm
