12869 - Modifiche eventi FSC Modificate entities per gestire i nuovi campi, modificati template di inserimento e aggiornata la validazione del evento FSC.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,11 +70,33 @@ giorni.min.evento.riedizione=10
 #numero responsabili scientifici evento massimi
 numero.massimo.responsabili.evento=3
 
+#numero esperti evento massimi
+numero.massimo.esperti.evento=3
+
+#numero coordinatori evento massimi
+numero.massimo.coordinatori.evento=3
+
 #giorni massimi durata evento FSC
 giorni.max.evento.fsc=730
 
+#giorni massimi durata evento FSC con Tipologia evento diversa da Attività di ricerca
+#ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.numero_massimo_giorni_evento_fsc_non_attivita_di_ricerca
+giorni.max.evento.fsc.versione2=365
+
+#giorni massimi durata evento FSC con Tipologia evento uguale ad Attività di ricerca
+#ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.numero_massimo_giorni_evento_fsc_attivita_di_ricerca
+giorni.max.evento.fsc.versione2.attivitaDiRicerca=730
+
 #giorni massimi durata evento FAD
 giorni.max.evento.fad=365
+
+#data fine massima per evento fad da mettere in formato yyyyMMdd
+#ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.fad_data_fine_non_appartenente_triennio_attuale
+evento.fad.data.fine.max.triennio=20191231
+
+#data fine massima per evento fad da mettere in formato yyyyMMdd
+#ATTENZIONE quando si cambia questa property occorre cambiare anche il testo dell'errore error.fsc_data_fine_non_appartenente_triennio_attuale
+evento.fsc.data.fine.max.triennio=20191231
 
 #numero minimo dei partecipanti all'evento convegno congresso RES
 numero.minimo.partecipanti.convegno.congresso.res=200
