--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -91,6 +91,8 @@ PersonaEvento.qualifica=label.qualifica
 PersonaEvento.ruolo=label.ruolo
 PersonaEvento.titolare=label.titolaresostituto
 PersonaEvento.anagrafica=
+PersonaEvento.identificativoPersonaRuoloEvento=label.identificativo_persona_evento
+PersonaEvento.svolgeAttivitaDiDocenza=label.svolge_attivita_docenza
 AnagraficaEventoBase.id=label.anagrafica.id
 AnagraficaEventoBase.cognome=label.cognome
 AnagraficaEventoBase.nome=label.nome
@@ -165,6 +167,7 @@ EventoFAD.titolo=label.titolo
 EventoFAD.verificaApprendimento=label.verifica_apprendimento_partecipanti
 EventoFAD.url=label.url
 EventoFAD.userId=label.userId
+EventoFAD.dataScadenzaInvioRendicontazione=label.data_scadenza_rendiconto
 RiepilogoFAD.metodologie=label.metodologie_didattiche
 RiepilogoFAD.obiettivi=label.tipologia_obiettivi_formativi
 VerificaApprendimentoFAD.verificaApprendimento=label.tipo
@@ -231,6 +234,9 @@ EventoFSC.fasiAzioniRuoli=label.fasi_azioni_ruoli
 EventoFSC.fasiAzioniRuoli.azioniRuoli=label.azioni_ruoli
 #List<RuoloOreFSC>
 EventoFSC.fasiAzioniRuoli.azioniRuoli.ruoli=label.ruoli_coinvolti
+EventoFSC.investigatori=label.investigatori
+EventoFSC.coordinatori=label.coordinatori
+EventoFSC.esperti=label.esperti
 #DiffIgnore
 #EventoFSC.numeroTutor=
 EventoFSC.fasiDaInserire=label.selezionare_le_fasi_da_inserire
@@ -242,6 +248,8 @@ EventoFSC.tipologiaGruppo=label.eventofsc_tipologiaGruppo
 EventoFSC.indicatoreEfficaciaFormativa=label.indicatore_efficacia
 EventoFSC.verificaApprendimento=label.verifica_apprendimento_partecipanti
 EventoFSC.verificaPresenzaPartecipanti=label.verifica_presenza_partecipanti
+EventoFSC.tipologiaSperimentazione=label.eventofsc_tipologiaSperimentazione
+EventoFSC.sperimentazioneClinica=label.eventofsc_sperimentazioneClinica
 FaseAzioniRuoliEventoFSCTypeA.azioniRuoli=label.azioni_ruoli
 FaseAzioniRuoliEventoFSCTypeA.faseDiLavoro=label.fase
 FaseAzioniRuoliEventoFSCTypeA.id=label.id
