Evento aggiunta campo versione.

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -72,6 +72,7 @@ EventoRES.responsabileSegreteria.anagrafica=
 EventoRES.sponsors=label.sponsors
 EventoRES.stato=label.stato
 EventoRES.titolo=label.titolo
+EventoRES.versione=label.versione
 EventoRES.pagatoQuietanza=label.pagato_con_quietanza
 #campi non in classe base Evento
 DettaglioAttivitaRES.argomento=label.argomento
@@ -131,6 +132,7 @@ EventoFAD.discipline=label.discipline
 EventoFAD.docenti=label.docente_tutor
 EventoFAD.durata=label.durata
 EventoFAD.pagatoQuietanza=label.pagato_con_quietanza
+EventoFAD.versione=label.versione
 #non salvato
 #EventoFAD.edizione=label.edizione
 EventoFAD.eventoAvvalePartner=label.si_avvale_di_partner
@@ -226,6 +228,7 @@ EventoFSC.responsabileSegreteria.anagrafica=
 EventoFSC.sponsors=label.sponsors
 EventoFSC.stato=label.stato
 EventoFSC.titolo=label.titolo
+EventoFSC.versione=label.versione
 #campi non in classe base Evento
 EventoFSC.descrizioneProgetto=label.descrizione_del_progetto
 #List<FaseAzioniRuoliEventoFSCTypeA>
