EventoRES aggiunta campo "Numero partecipanti per corso" in caso di tipologia evento "Corso di aggiornamento teorico e/o pratico (massimo 200 partecipanti)"

--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -19,6 +19,7 @@ EventoRES.sedeEvento=label.informazioni_sede
 EventoRES.tipologiaEventoRES=label.tipologia_evento
 EventoRES.titoloConvegno=label.titolo_convegno
 EventoRES.workshopSeminariEcm=label.workshop_radio_text
+EventoRES.numeroPartecipantiPerCorso=label.numero_partecipanti_per_corso
 SedeEvento.comune=label.comune
 SedeEvento.provincia=label.provincia
 SedeEvento.indirizzo=label.indirizzo
