--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -119,6 +119,9 @@ durata.minima.evento.res=3
 #numero di versione degli eventi che viene utilizzata come default nel caso non sia stato possibile valutarla
 evento.numeroversione.default=2
 
+#numeri di versioni degli eventi dei quali è possibile effettuare la riedizione, è possibile mettere più versioni separandole con la virgola (es. 1,2)
+evento.versioni.rieditabili=2
+
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
 evento.data.passaggio.versione.due=20180101
 
