--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.cache: false
 
 ############### ECM PROPERTIES ###############
-
+email.segreteriaEcm=mlcarlino@3di.it
 debugTestMode=true
 debugSaltaProtocollo=true
 pianoFormativo.giornoFineModifica=31
