--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -25,6 +25,7 @@ logging.level.org.thymeleaf.* ERROR
 ############### ECM PROPERTIES ###############
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
+debugSaltaProtocollo=true
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://altecm01:18080/bonitaview
