Impostata data di passaggio versione eventi al 01/03/2018

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -17,6 +17,9 @@ debugSaltaProtocollo=true
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
+#data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
+evento.data.passaggio.versione.due=20180301
+
 ###### PROTOCOLLO #######
 protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
 
