--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -215,6 +215,7 @@ protocollo.codStruttura=69.02.03.00.00
 protocollo.idc=C.120.23.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
 protocollo.webrainbow.ufficioCreatore=3dial
+protocollo.service.versione=webrainbow
 
 ######### CAS #########
 app.service.home=https://localhost:8443/
