Passaggio a versione 2 dell'applicativo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 25MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=2.0.0-SNAPSHOT
+ecm.version=2.0.0
 
 #validita' in giorni della password
 account.expires.days=365
@@ -117,13 +117,13 @@ numero.massimo.partecipanti.audit.clinico.fsc=25
 durata.minima.evento.res=3
 
 #numero di versione degli eventi che viene utilizzata come default nel caso non sia stato possibile valutarla
-evento.numeroversione.default=1
+evento.numeroversione.default=2
 
 #numeri di versioni degli eventi dei quali è possibile effettuare la riedizione, è possibile mettere più versioni separandole con la virgola (es. 1,2)
 evento.versioni.rieditabili=2
 
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
-evento.data.passaggio.versione.due=20180201
+evento.data.passaggio.versione.due=20180301
 
 #durata minima richiesta per evento FSC di tipo audit clinico
 durata.minima.audit.clinico.fsc=10
