--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 25MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=2.0.1-SNAPSHOT
+ecm.version=2.0.1
 
 #validita' in giorni della password
 account.expires.days=365
@@ -123,7 +123,7 @@ evento.numeroversione.default=2
 evento.versioni.rieditabili=2
 
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
-evento.data.passaggio.versione.due=20180301
+evento.data.passaggio.versione.due=20180401
 
 #durata minima richiesta per evento FSC di tipo audit clinico
 durata.minima.audit.clinico.fsc=10
