13911 - Modifica vaschetta mancato pagamento provider 13897 - Filtro temporale su lista eventi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -125,6 +125,9 @@ evento.versioni.rieditabili=2
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
 evento.data.passaggio.versione.due=20180401
 
+#la lista eventi di default sia provider che segreteria, viene filtrata per data modifica maggiore della data ottenuta sottraendo alla data attuale i giorni configurati 
+evento.lista.default.giorni.ultima.modifica=365
+
 #durata minima richiesta per evento FSC di tipo audit clinico
 durata.minima.audit.clinico.fsc=10
 
