12976 - Modifica posticipo data inizio evento accreditato

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,6 +67,12 @@ giorni.min.evento.provider.B=30
 #numero giorni minimi necessari per poter inserire evento riezione
 giorni.min.evento.riedizione=10
 
+#numero giorni prima dell'inizio di un evento fino a quando è possibile posticipare l'eento (provider A)
+giorni.possibilita.posticipo.da.inizio.evento.provider.A=4
+
+#numero giorni prima dell'inizio di un evento fino a quando è possibile posticipare l'eento (provider b)
+giorni.possibilita.posticipo.da.inizio.evento.provider.B=10
+
 #numero responsabili scientifici evento massimi
 numero.massimo.responsabili.evento=3
 
