--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 25MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=2.0.1
+ecm.version=2.0.2-SNAPSHOT
 
 #validita' in giorni della password
 account.expires.days=365
@@ -131,7 +131,7 @@ evento.versioni.rieditabili=2
 #data inizio dalla quale un evento viene considerato di versione 2 da mettere in formato yyyyMMdd
 evento.data.passaggio.versione.due=20180401
 
-#la lista eventi di default sia provider che segreteria, viene filtrata per data modifica maggiore della data ottenuta sottraendo alla data attuale i giorni configurati 
+#la lista eventi di default sia provider che segreteria, viene filtrata per data modifica maggiore della data ottenuta sottraendo alla data attuale i giorni configurati
 evento.lista.default.giorni.ultima.modifica=365
 
 #durata minima richiesta per evento FSC di tipo audit clinico
