--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -22,6 +22,10 @@ logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
+evento.numeroversione.default=1
+evento.versioni.rieditabili=1,2
+evento.data.passaggio.versione.due=20180416
+
 ############### ECM PROPERTIES ###############
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
