--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -33,7 +33,7 @@ bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
 ###### E-MAIL ######
-mail.host=dns3.bo.priv
+mail.host=smtp-relay.gmail.com
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
