eventi di default versione 1

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -16,6 +16,10 @@ logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
 ############### ECM PROPERTIES ###############
+evento.numeroversione.default=1
+evento.versioni.rieditabili=1
+evento.data.passaggio.versione.due=20310416
+
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
