Completata il refactoring e sistemazione codice webrainbow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -208,14 +208,19 @@ firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTT
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=http://ecmtest.demo.3di.it/ecm/*
 
-######### PROTOCOLLO #########
+######### PROTOCOLLO  #########
+protocollo.service.versione=webrainbow
+
+######### PROTOCOLLO RV #########
 protocollo.codApplicativo=S051.001
 protocollo.operatore.entrata=tania-ferrotti
 protocollo.codStruttura=69.02.03.00.00
 protocollo.idc=C.120.23.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
-protocollo.webrainbow.ufficioCreatore=UOC Formazione e Sviluppo delle Professioni Sanitarie
-protocollo.service.versione=webrainbow
+
+######### PROTOCOLLO WEB RAINBOW #########
+protocollo.webrainbow.ufficioCreatore.entrata=UOC Formazione e Sviluppo delle Professioni Sanitarie
+protocollo.webrainbow.ufficioCreatore.uscita=UOC Formazione e Sviluppo delle Professioni Sanitarie
 
 ######### CAS #########
 app.service.home=https://localhost:8443/
