12313 - Proroga accreditamento provvisorio da interfaccia

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,7 @@ email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #esempio...mette si a tutte le valutazioni....
 debugTestMode=false
 debugSaltaProtocollo=false
+debugSaltaScheduledTasks=false
 
 #giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.min=5
