--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -367,6 +367,7 @@ Anagrafica.pec=label.pec
 #AccreditamentoAudit
 AccreditamentoAudit.id=label.id
 AccreditamentoAudit.tipoDomanda=label.tipo_domanda
+AccreditamentoAudit.dataFineAccreditamento=label.accreditamento_fine
 DatiAccreditamentoAudit.id=label.dati_accreditamento.id
 #DATI DELLA STRUTTURA
 AccreditamentoAudit.datiAccreditamento=
