--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -77,6 +77,7 @@ email.segreteriaEcm=me@bo.prov
 application.baseurl=http://localhost:8080
 debugTestMode=true
 debugSaltaProtocollo=true
+debugSaltaScheduledTasks=false
 
 ##############################################
 
