Annulla e rigenera protocollo

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -14,6 +14,7 @@ spring.thymeleaf.cache: false
 email.segreteriaEcm=mlcarlino@3di.it
 debugTestMode=true
 debugSaltaProtocollo=true
+debugBrokeProtocollo=true
 pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
