--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,6 +17,7 @@ spring.thymeleaf.cache: false
 
 debugTestMode=true
 debugSaltaProtocollo=true
+debugBrokeProtocollo=true
 
 ############### ECM PROPERTIES ###############
 pianoFormativo.giornoFineModifica=31
