--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,10 +44,13 @@ seduta.validation.minutes=30
 #email segreteria ECM
 email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 
-#debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test
-#esempio...mette si a tutte le valutazioni....
+#debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test (#esempio...mette si a tutte le valutazioni....)
 debugTestMode=false
+#debugSaltaProtocollo defalut=false se attiva usa un meccanismo interno per generare numero e data di protocollo
 debugSaltaProtocollo=false
+#debugBrokeProtocollo defalut=false se attiva manda in errore le protocollazioni in uscita...utile per testare il meccanismo di annullamento/riesecuzione del protocollo
+debugBrokeProtocollo=false
+#debugSaltaScheduledTasks defalut=false se attiva mette in pausa i task
 debugSaltaScheduledTasks=false
 
 #giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
