Protocollo RV di default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -209,7 +209,7 @@ firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=http://ecmtest.demo.3di.it/ecm/*
 
 ######### PROTOCOLLO  #########
-protocollo.service.versione=webrainbow
+protocollo.service.versione=rv
 
 ######### PROTOCOLLO RV #########
 protocollo.codApplicativo=S051.001
