--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -257,6 +257,7 @@ protocollo.idc=C.120.23.1
 protocollo.endpoint=http://192.168.2.94/LapisWebSOAP/LapisWebSOAP.asp
 
 ######### PROTOCOLLO WEB RAINBOW #########
+protocollo.webrainbow.endpoint=http://172.18.11.30/WebRainbow/Protocol?wsdl
 protocollo.webrainbow.ufficioCreatore.entrata=UOC Formazione e Sviluppo delle Professioni Sanitarie
 protocollo.webrainbow.ufficioCreatore.uscita=UOC Formazione e Sviluppo delle Professioni Sanitarie
 
