configurazione webrainbow per ambiente prod

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -82,13 +82,17 @@ firma.url=https://sicurezza.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=https://ecm.regione.veneto.it/ecm/*
 
-######### PROTOCOLLO #########
+######### PROTOCOLLO  #########
 protocollo.codApplicativo=S051.001
 protocollo.operatore.entrata=ecm
 protocollo.operatore.uscita=tania-ferrotti
 protocollo.codStruttura=72.00.08.00.00
 protocollo.idc=G.900.11.1
 protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
+
+protocollo.service.versione=webrainbow
+protocollo.webrainbow.endpoint=http://wr4zero.websanita.intra.rve/WebRainbow/Protocol?wsdl
+
 ##############################################
 
 spring.datasource.test-on-borrow=true
