--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ file.multipart.maxFileSize4MB=4
 seduta.validation.minutes=30
 
 #email segreteria ECM
-email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
+email.segreteriaEcm=formazione.sviluppo@azero.veneto.it
 
 #debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test (#esempio...mette si a tutte le valutazioni....)
 debugTestMode=false
@@ -156,8 +156,9 @@ giorni.prima.blocco.edit.gruppoA=4
 #giorni prima del blocco edit di Eventi del provider di gruppo B
 giorni.prima.blocco.edit.gruppoB=10
 
-#abilta / disabilita l'invio automatico di email come promemoria delle scadenza
-task.sendAlertEmail=false
+#ERM14774
+#abilta / disabilita l'invio automatico di email come promemoria delle scadenza 
+task.sendAlertEmail=true
 
 #limite di valutazioni non date per cui un referee è selezionabile per una valutazione
 valutazioni.non.date.limite=3
