FIX: invio dei mail non voluti se avviato come demo!!!!

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -34,7 +34,7 @@ bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
 ###### E-MAIL ######
-mail.host=smtp-relay.gmail.com
+mail.host=##smtp-relay.gmail.com
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
