--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -15,6 +15,11 @@ logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
+#ERM14774
+#abilta / disabilita l'invio automatico di email come promemoria delle scadenza 
+task.sendAlertEmail=true
+
+
 ############### ECM PROPERTIES ###############
 evento.numeroversione.default=2
 evento.versioni.rieditabili=1,2
@@ -51,7 +56,6 @@ mail.smtp.auth=false
 mail.smtp.starttls.enable=false
 mail.username=
 mail.password=
-email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
 application.baseurl=http://ecm.regione.veneto.it
 
