--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -158,7 +158,7 @@ giorni.prima.blocco.edit.gruppoB=10
 
 #ERM14774
 #abilta / disabilita l'invio automatico di email come promemoria delle scadenza 
-task.sendAlertEmail=true
+task.sendAlertEmail=false
 
 #limite di valutazioni non date per cui un referee è selezionabile per una valutazione
 valutazioni.non.date.limite=3
