--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize = 25MB
 #logging.file=c:/ecm.log
 
 ############### ECM PROPERTIES ###############
-ecm.version=2.0.5.1
+ecm.version=2.0.6-SNAPSHOT
 
 #validita' in giorni della password
 account.expires.days=365
@@ -157,7 +157,7 @@ giorni.prima.blocco.edit.gruppoA=4
 giorni.prima.blocco.edit.gruppoB=10
 
 #ERM14774
-#abilta / disabilita l'invio automatico di email come promemoria delle scadenza 
+#abilta / disabilita l'invio automatico di email come promemoria delle scadenza
 task.sendAlertEmail=false
 
 #limite di valutazioni non date per cui un referee è selezionabile per una valutazione
