--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -34,7 +34,10 @@ bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
 ###### E-MAIL ######
-mail.host=##smtp-relay.gmail.com
+
+task.sendAlertEmail=false
+
+mail.host=smtp-relay.gmail.com
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
